base crud service

--- a/Gold.Io.Kyc/Gold.IO.Kyc.Storage/Gold.IO.Kyc.Storage.csproj
+++ b/Gold.Io.Kyc/Gold.IO.Kyc.Storage/Gold.IO.Kyc.Storage.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Gold.Io.Kyc.Models\Gold.IO.Kyc.Models.csproj" />
+  </ItemGroup>
+
 </Project>
