--- a/Gold.Io.Kyc/Gold.IO.Kyc.Services/Gold.IO.Kyc.Services.csproj
+++ b/Gold.Io.Kyc/Gold.IO.Kyc.Services/Gold.IO.Kyc.Services.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Gold.IO.Kyc.Storage\Gold.IO.Kyc.Storage.csproj" />
+  </ItemGroup>
+
 </Project>
